cmake_minimum_required(VERSION 3.0.2)
project(tiny-aes)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
SET(CMAKE_DEFAULT_STARTUP_PROJECT tiny-aes)

SET(GCC_COVERAGE_COMPILE_FLAGS "")

file(GLOB SOURCES "*.c")

SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
SET( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}" )

add_executable(tiny-aes ${SOURCES})
